test(storyfilehandling): replace Paths.get with Path.of